fix(Nav): overflow scrolling issue

--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -71,6 +71,9 @@ nav.short {
 }
 
 nav.logo {
+  .display-block {
+    display: block !important;
+  }
   @media (max-width: 767px) {
     position: relative;
   }
